# opengl_fun

./: .gitignore  CMakeLists.txt
include/: camera.hh  file_utils.hh  shader.hh
include/glad/: glad.h
shaders/: test.frag  test.vert
src/: CMakeLists.txt  ex1.cpp  glad.c  main.cpp  shader.hh
